<resources>
    <string name="app_name">SimpleKanbanBoard</string>
    <string name="ready">ready</string>
    <string name="doing">doing</string>
    <string name="done">done</string>
    <string name="bitte_text_eintragen">Bitte Text eintragen</string>
    <string name="add">add</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="insert_text">Insert text bevor adding a new card</string>
</resources>
