<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="10"
    tools:context="kanban.haraldwolz.de.simplekanbanboard.MainActivity">


    <LinearLayout
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="3">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/ready"
            android:textAlignment="center"
            android:background="@drawable/shape_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/doing"
            android:textAlignment="center"
            android:background="@drawable/shape_header"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/done"
            android:textAlignment="center"
            android:background="@drawable/shape_header"/>
    </LinearLayout>

    <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="3"
        android:layout_weight="8"

        android:stretchMode="columnWidth">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="3"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/left"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:background="@drawable/shape"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="4dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/middle"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:background="@drawable/shape"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="4dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/right"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:background="@drawable/shape"
                android:orientation="vertical"
                android:layout_weight="1"
                android:padding="4dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medium Text"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>
    </GridLayout>


    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:padding="5dp"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:ems="12"
            android:maxLength="50"
            android:id="@+id/editText" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageViewAdd"
                android:src="@android:drawable/ic_input_add"
                android:contentDescription="@string/add" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageViewUpdate"
                android:src="@drawable/abc_ic_ab_back_material"
                android:contentDescription="@string/update" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/imageViewDelete"
                android:src="@android:drawable/ic_delete"
                android:contentDescription="@string/delete" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>


